# roshi

./: .gitignore  .gitmodules  Cargo.toml  Justfile  LICENSE  Makefile  README.md  Surfpool.toml
crates/client/: Cargo.toml
crates/client/src/: access.rs  instruction.rs  lib.rs
crates/client/src/instruction/: action.rs  asset.rs  core.rs  execution.rs  program.rs  user.rs  vault.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  programs.rs
crates/interface/: Cargo.toml
crates/interface/examples/: generate_codama_idl.rs
crates/interface/src/: access.rs  action.rs  error.rs  lib.rs  math.rs  oracle.rs
crates/interface/src/instructions/: args.rs  mod.rs
crates/interface/src/state/: asset.rs  flags.rs  mod.rs  vault.rs
crates/roshi/: Cargo.toml
crates/roshi/src/: error.rs  lib.rs  oracle.rs  processor.rs
crates/roshi/src/instructions/: accounts.rs  authorize_action.rs  claim.rs  deposit.rs  initialize_asset.rs  initialize_sub_account.rs  initialize_vault.rs  manage.rs  manage_batch.rs  metaplex.rs  mod.rs  pause_vault.rs  process_epoch.rs  process_withdrawals.rs  redeem.rs  resume_vault.rs  revoke_action.rs  token.rs  update_fee_config.rs  update_operator.rs  update_queue_authority.rs  update_total_assets.rs  update_vault_config.rs
crates/roshi/src/instructions/accounts/: action.rs  asset.rs  atomic_redeem.rs  cancel_redeem.rs  deposit.rs  external_destination.rs  manage.rs  mod.rs  oracle_price.rs  process_withdrawals.rs  program_config.rs  redeem.rs  shared.rs  swap.rs  vault.rs
crates/roshi/src/instructions/admin/: authorize_action.rs  collect_fees.rs  flash_fee_rate.rs  initialize_asset.rs  initialize_program.rs  initialize_sub_account.rs  initialize_vault.rs  invest_external.rs  mod.rs  process_withdrawals.rs  register_external_destination.rs  report_nav.rs  return_external.rs  revoke_action.rs  revoke_external_destination.rs  set_nav_authority.rs  set_pause_flags.rs  set_share_metadata.rs  set_strategist.rs  set_swap_authority.rs  set_vault_access.rs  set_withdrawal_authority.rs  transfer_program_authority.rs  transfer_vault_authority.rs  update_asset.rs  update_vault_config.rs  vault_update.rs  write_down_fees.rs
crates/roshi/src/instructions/execution/: assert_delegate_cleared.rs  atomic_redeem.rs  manage.rs  manage_batch.rs  mod.rs  shared.rs  swap.rs
crates/roshi/src/instructions/user/: cancel_redeem.rs  deposit.rs  mod.rs  redeem.rs
crates/roshi/src/oracle/: pyth.rs  switchboard.rs
crates/roshi/src/state/: action.rs  asset.rs  external_destination.rs  flags.rs  mod.rs  program_config.rs  sub_account.rs  vault.rs  withdrawal_ticket.rs
crates/tests/: Cargo.toml
crates/tests/src/: helpers.rs  lib.rs
crates/tests/src/helpers/: oracle.rs  program.rs  token.rs  transaction.rs  vault.rs
crates/tests/src/tests/: action.rs  asset.rs  atomic_redeem.rs  deposit.rs  external_destination.rs  flash_approve.rs  flash_fee_rate.rs  initialize_vault.rs  manage.rs  mod.rs  nav_controls.rs  nav_reporting.rs  program.rs  redeem.rs  require_sibling.rs  role_authorities.rs  share_metadata.rs  swap.rs  vault_config.rs  write_down_fees.rs
docs/: access.md  accounting.md  controls.md  design.md  economic-controls.md  execution.md  math.md  nav_reporting.md  oracles.md  rbac.md  subaccounts.md  withdrawals.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/: 06d6c9c368a54e99  0b9e796c16bfa386  0f05ae948bcd8932  2eacc131fbebdf29  3c760620ef6450a6  3fc52388b4e79d14  51242ce5c293a0de  5d36f07d97ed9712  6d450f571bbe5429  6ee876d9e7bfeacf  96a3a3472ed3fac9  9c9b2c07feef32f9  a334b07207bcdc81  a6ae5b2d78de13be  bcceeef3a211efb2  cbadd6e637e9aa6d  d03c2fbe90c65439  d39d3809ff8d900c  d594e1f0870b4413  ed72d63a3f3aa486  faf3fcff57aaa93d
fuzz/src/: fixture.rs  main.rs  support.rs
fuzz/src/fixture/: authority_config.rs  controls.rs  deposits.rs  execution.rs  nav_fees.rs  setup.rs  withdrawals.rs
scripts/: surfpool-test.sh
tests/: Cargo.toml
tests/src/: helpers.rs  lib.rs
