[package]
name = "roshi_fuzz"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone workspace — isolated from the roshi workspace so the fuzzer's
# litesvm/solana stack resolves independently of the program's own build.
[workspace]

[dependencies]
# Fuzzing framework — our fork (litesvm 0.12 / solana-pubkey 4.x), vendored as
# the `vendor/crucible` git submodule. It lives outside this workspace dir so
# cargo resolves its crates against crucible's own workspace, not ours.
crucible-fuzzer = { path = "../vendor/crucible/crates/crucible-fuzzer" }
crucible-test-context = { path = "../vendor/crucible/crates/crucible-test-context" }

# The program under test, reused verbatim: roshi-client builds wire-correct
# (wincode-encoded) instructions, roshi/-interface provide state + arg types.
roshi = { path = "../crates/roshi", default-features = false }
roshi-interface = { path = "../crates/interface" }
roshi-client = { path = "../crates/client" }
wincode = { version = "0.5.4", features = ["derive"] }

# Solana client crates on the same line crucible/litesvm 0.12 resolve to, so the
# `Instruction`/`Pubkey`/`Keypair` types unify with roshi-client's.
solana-pubkey = "4.2"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-instruction = "3.4"
solana-account = "3.2"

# Fuzzing engine deps (mirrors crucible's example harness).
anchor-lang = "1.0.2"
libafl = { version = "0.15.1", features = ["std", "cli", "prelude"] }
libafl_bolts = { version = "0.15.1", features = ["std"] }
arbitrary = { version = "1", features = ["derive"] }
anyhow = "1.0"
ctrlc = "3.4"

[[bin]]
name = "invariant_test"
path = "src/main.rs"

[features]
# Each fuzz test is a feature; `crucible run roshi <feature>` selects it.
invariant_core = []
