[package]
name = "roshi-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
common = { path = "../crates/common" }
roshi = { path = "../crates/roshi", default-features = false }
litesvm = "0.12"
solana-instruction = "3.4.0"
solana-pubkey = "4.2.0"
solana-sdk = "3.0.0"
solana-transaction = "3.1.0"
wincode = { version = "0.5.4", features = ["derive"] }
