[package]
name = "roshi-client"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
description = "Thin client helpers for building Roshi Solana program instructions."
repository = "https://github.com/Rhovian/roshi"

[dependencies]
roshi-interface = { path = "../interface", version = "0.1.4" }
# Caret floors — see interface/Cargo.toml: compose with the SDK 4.0.0 client line.
solana-instruction = "3.3"
solana-pubkey = "4.1"
solana-system-interface = "3.1"
wincode = "0.5.4"
