[package]
name = "roshi-interface"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
solana-instruction = "3.4.0"
solana-program-error = "3.0.1"
solana-pubkey = "4.2.0"
solana-sha256-hasher = { version = "3.1.0", features = ["sha2"] }
wincode = { version = "0.5.4", features = ["derive"] }

[dev-dependencies]
proptest = "1"
