[package]
name = "roshi-interface"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "On-chain instruction interface and types for the Roshi Solana program."
repository = "https://github.com/Rhovian/roshi"

[package.metadata.solana]
program-id = "Roshi11111111111111111111111111111111111111"

[dependencies]
codama-macros = "0.9.2"
solana-instruction = "3.4.0"
solana-program-error = "3.0.1"
solana-pubkey = "4.2.0"
solana-sha256-hasher = { version = "3.1.0", features = ["sha2"] }
wincode = { version = "0.5.4", features = ["derive"] }

[dev-dependencies]
codama = "0.9.2"
proptest = "1"
serde_json = "1"

[[example]]
name = "generate_codama_idl"
