[package]
name = "roshi-interface"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "On-chain instruction interface and types for the Roshi Solana program."
repository = "https://github.com/Rhovian/roshi"

[package.metadata.solana]
program-id = "Roshi11111111111111111111111111111111111111"

[dependencies]
codama-macros = "0.9.2"
# Floors, not exact pins: caret ranges so this crate composes with the published
# Solana SDK client line (solana-rpc-client 4.0.0 caps pubkey at 4.1.x / instruction
# at 3.3.x) while still resolving to the latest 4.x/3.x when built standalone.
solana-instruction = "3.3"
solana-program-error = "3.0.1"
solana-pubkey = { version = "4.1", features = ["curve25519"] }
solana-sha256-hasher = { version = "3.1.0", features = ["sha2"] }
wincode = { version = "0.5.4", features = ["derive"] }

[dev-dependencies]
codama = "0.9.2"
proptest = "1"
serde_json = "1"

[[example]]
name = "generate_codama_idl"
