[package]
name = "roshi-tests"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
roshi = { path = "../roshi", default-features = false }
roshi-interface = { path = "../interface" }
roshi-client = { path = "../client" }
litesvm = "0.12"
solana-instruction = "3.4.0"
solana-pubkey = "4.2.0"
solana-sdk = "3.0.0"
solana-system-interface = "3.2.0"
solana-transaction = "3.1.0"
wincode = { version = "0.5.4", features = ["derive"] }
